modify background image after each countdown
added setBackgroundImage method to modify background image after countdown ends.
add image names to array to set images as background image.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 		<h1 class="heading"><img src="logo_nc.png" width="100" ></h1>
 		<hr>
 	</header> 
+	<div class="background-container">
+		<img src="">
+	</div>
 	<div class="container">
 		<div id="timer"><span id="minus">-</span><span id="cd_m">00</span><span id="point">:</span><span id="cd_s">00</span></div>
 	</div>
